v0.8.6
- New report usage in development
- Updated usage report according to data migration from adl to umcdj
- Reduced to two reports one for all statements in organisation, one for usage (user vs time) report

v0.8.5
- Fixed bug in deleting organisation makes organisation users suspended with no organisations. changed code to mark deleted organisatin's users as inactive. 
- Added super user view of user table: Now a the superuser/staff of the project can see all users in the database. 
- Code clean up (print statements)

v0.8.4
- Updated production server and migrated to postgres.
- Tested prod server okay.
- Fixed small report bug.

v0.8.3
- Small update to development deployment script to auto install without prompting for a particular dependency.
- Updated ReadMe

v0.8.2
- Updated jenkins test script to ignore a few applications in testing for now.
- Updated build development script to account for installing postgres, creating users. 
- Added simplejson and other dependencvies (postgres related)
- Removed import from django-util simplejson because Django 1.5 removed support for in built simplejson (https://docs.djangoproject.com/en/dev/releases/1.5/)
- Updated build script to install simplejson

v0.8.1
- Updated settings.py to have a different database for unit testing (sqlite3) since postgres is troubling. it doesn't matter since django creates a new database anyway.  
- Fixed some bugs
- Updated build script and jenkins script. 
- Added HTML5 canvas report (demonstration)
- Further tests and fixes including postgres tests and migration trial

v0.8.0
- Django and ADL_LRS (Ustad Mobile custom) integrated to a point where statements can be worked and retrieved from the database.
- Updated ADL_LRS (UM) on own seperate repository and changed prefered sql to be postgres
- Basic statement for all report supporting this milestone. 


v0.7.9c
- Added reporting application, tested basic report fetch of statements. Looking good.

v0.7.9b