@@ -24,7 +24,7 @@
         				records:[
                 				{% if object_list %}
                         				{% for c in object_list %}
-								{"user":"{{c.user.first_name}} {{c.user.last_name}}","activity_verb":"{{c.verb.get_display}}","activity_type":"{{c.object_activity.get_a_name}}","timestamp":"{{c.timestamp}}","duration":"{{c.get_r_duration}}"}{% if not forloop.last %},{% endif %}
+								{"user":"{{c.user.first_name}} {{c.user.last_name}}","activity_verb":"{{c.verb.get_display}}","activity_id":"{{c.object_activity.get_a_id}}","activity_type":"{{c.object_activity.get_a_name}}","timestamp":"{{c.timestamp}}","duration":"{{c.get_r_duration}}"}{% if not forloop.last %},{% endif %}
                         				{% endfor %}
                 				{% endif %}
                 				]
